--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ server.error.include-message=always
 #logging.level.org.springframework.security=TRACE
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.web.filter=DEBUG
+
+
+#server.port=8082
